# FusionEMS-Core

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .tflint.hcl  AWS_DEPLOYMENT.md  BUILD_QUEUE.md  CODEX_BUILD_DIRECTIVE.md  COMPLIANCE_CONTROLS.md  CORE_ITEMS_GAP_AUDIT.md  FINAL_BUILD_STATEMENT.md  FRONTEND_QUEUE.md  INTEGRATIONS.md  PLAN.md  PRODUCT_REQUIREMENTS.md  README.md  README_DEPLOY.md  ZERO_ERROR_DIRECTIVE.md  ZERO_ERROR_QUICKSTART.md  bootstrap.sh  checkov.yml  current_task_def.json  docker-compose.yml  ec2 describe-network-acls --network-acl-ids  --query NetworkAcls[0].Entries[?Egress==`false` && PortRange.From==`80`] --output json  tasks_list.md
backend/: =0.27.0  Dockerfile  RUNBOOK_BILLING.txt  RUNBOOK_TELNYX.txt  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset_db.py
backend/alembic/: env.py
backend/alembic/versions/: 20260223_0001_create_incidents.py  20260224_0002_create_patients.py  20260224_0003_create_coding_tables.py  20260224_0003_create_vitals.py  20260224_0004_create_claims.py  20260224_0004_create_integration_registry.py  20260224_0005_add_claim_idempotency_key.py  20260224_0005_claim_idempotency_key.py  20260224_0005_create_idempotency_receipts.py  20260224_0006_create_inventory_dea.py  20260224_0007_create_assets_fleet.py  20260224_0008_create_fire_module.py  20260224_0009_create_hems_crewlink.py  20260224_0010_create_ai_hardening.py  20260224_0011_create_ocr_uploads.py  20260225_0004_domination_hybrid.py  20260225_0005_missing_tables.py  20260225_0006_saas_onboarding_roi_accreditation_fhir.py  20260225_0007_lob_receipts.py  20260226_0008_new_feature_tables.py  20260226_0009_rls_fixes.py  20260226_0010_telnyx_tables.py  20260227_0011_cat6_to_cat10_tables.py  20260227_0012_epcr_nemsis_pack_tables.py  20260227_0013_selfservice_support_events.py  20260227_0014_neris_wisconsin_rms.py  20260227_0015_ops_control_platform.py  20260227_0016_collections_trip_pricebooks.py  20260227_0017_kitlink_ar.py  20260227_0018_compliance_pack_index.py  20260227_0019_payments_builders_rulesets.py  20260227_0020_hems_lifecycle_rep_signatures.py  20260227_0021_founder_copilot_voice_tables.py  20260227_0022_communications_audit_idempotency.py  20260227_0023_epcr_option_a_nemsis_submissions.py  20260301_0024_onboarding_plan_codes.py  20260301_0025_onboarding_contact_fields.py
backend/app/: main.py
backend/app/api/: router.py  routes_auth.py  routes_founder.py
backend/app/audit/: service.py
backend/app/core/: config.py  (+5 more)
backend/backend:alembic/: script.py.mako
backend/compliance_packs/: caas_ground_pack_v1.json  camts_hems_pack_v1.json  dea_cs_pack_v1.json  hospital_ems_pack_v1.json  pack_index_v1.json
backend/core_app/: Dockerfile  gunicorn.conf.py  main.py  main.py.patch  pyproject.toml  requirements.txt  worker.py
backend/scripts/: import_icd10.py  import_rxnorm.py  smoke_test.py
backend/tests/: test_ai_service.py  test_assets_service.py  test_billing_integration.py  test_billing_validator.py  test_claim_service.py  test_coding_service.py  test_fire_service.py  test_health.py  test_hems_service.py  test_incident_service.py  test_integration_registry_service.py  test_inventory_service.py  test_ocr_service.py  test_patient_service.py  test_pricing_catalog.py  test_realtime_and_idempotency.py  test_systems_public.py  test_telnyx_integration.py  test_vital_service.py
backend/versions/: 20260223_0001_create_incidents.py  20260224_0002_create_patients.py  20260224_0003_create_vitals.py  20260225_0004_domination_hybrid.py  20260227_0005_founder_copilot.py
(+712 files in other folders)
